--- a/index.html
+++ b/index.html
@@ -19,33 +19,18 @@
 
 </head>
 <body>
-    <!-- Header -->
-    <!-- <header class="bg-black text-white">
-        <div class="nav-bar">
-            <div class="container mx-auto flex justify-around items-center py-4 px-6">
-                <div class="text-xl font-bold logo">
-                        <a href="index.html"><img src="assets/images/logo.png" alt="logo" class="w-10 h-10"></a>
+
+    <header class="">
+        <nav class="nav-bar px-4 lg:px-6 py-2.5 ">
+            <div class="w-full md:w-10/12 xl:w-12/12 flex flex-wrap justify-between items-center mx-auto relative ">
+                <div class="background absolute top-[120%] left-[2%] w-full h-full ">
+                    <img src="assets/images/Line1.png" alt="line" class="hidden md:block">
                 </div>
-                <nav class="flex space-x-6">
-                  <a href="#" class="hover:text-gray-300">HOME</a>
-                  <a href="#" class="hover:text-gray-300">FACE & NECK</a>
-                  <a href="#" class="hover:text-gray-300">Body</a>
-                  <a href="#" class="hover:text-gray-300">ESELLA</a>
-                  <a href="#" class="hover:text-gray-300">Sexual DYSFUNCTION</a>
-                </nav>
-                <a href="contactus.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded">Contact Us</a>
-            </div>
-        </div>
-    </header> -->
-    <header>
-        <nav class="nav-bar  border-gray-200 px-4 lg:px-6 py-2.5 ">
-            <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl mx-0">
-                <a href="index.html" class="flex justify-center items-center">
-                    <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />                  
+                <a href="index.html" class="flex justify-center items-start ">
+                    <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-12" alt="Flowbite Logo" />                  
                 </a>
-                <div class="flex items-center lg:order-2">
-                    
-                    <a href="contactus.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded raleway">Contact Us</a>
+                <div class="flex   lg:order-2 relative z-10">
+                    <a href="contactus.html" class="relative z-20  bg-cyan-200  hover:bg-cyan-700 text-black-900 font-semibold py-2 px-4  raleway border-1">Contact Us</a>
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -71,19 +56,75 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> 
         </nav>
     </header>
 
+  
     <main>
 
         <!-- main-banner  -->
-        <div class="swiper-container3">
+        <div class="swiper-container3 ">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <section>
                         <div class="main-banner relative truncate">
-                            <div class="main-banner-background-image absolute top-0 left-[-7%] w-4/12 h-full">
+                            <div class="main-banner-background-image absolute top-0 left-[-3%] w-11/12 h-full">
+                                <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
+                            </div>
+                            <div class="container mx-auto flex justify-center mb-10">
+                                <div class="w-11/12 lg:w-8/12 xl:w-full ">
+                                    <div class="main-banner-container">
+                                        <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
+                                            <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/star.png" alt="star">
+                                            </div>
+                                            <div class="banner-first-image text-white">
+                                                <img src="assets/images/banner-image-1.png" alt="banner-image" class="max-w-full">
+                                            </div>
+                                            <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
+                                                <p class="text-white raleway text-sm text-color">Cosmetology clinic services</p>
+                                                <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
+                                                  <span class="block lg:inline-block text-white font-bold">NATURAL</span>
+                                                  <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
+                                              </h2>
+                                          </div>
+                                        </div>
+                                        <div class="w-11/12 mt-4 relative">
+                                            <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
+                                                <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
+                                            </div>
+                                            <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
+                                                <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
+                                                    <div class="banner-p my-4 ">
+                                                        <p class="text-white raleway ">We use premium products for a <br> more natural result.</p>
+                                                    </div>
+                                                    <div class="banner-crub flex justify-start lg:justify-start items-center">
+                                                        <div class="banner-crub-image mr-3">
+                                                            <img src="assets/images/Ellipse-2.png" alt="Home">
+                                                        </div>
+                                                        <div class="star absolute top-[65%] left-[-30%] lg:left-[5%]">  
+                                                            <img src="assets/images/Star-1.png" alt="Home" class="">
+                                                        </div>
+                                                        <p class="mr-3 text-white"></p>
+                                                        <p class="text-white -ml-2 raleway">Browse our craft</p>
+                                                    </div>
+                                                </div>
+                                                <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
+                                                    <img src="assets/images/banner-image.png" alt="banner-image" class="max-w-full">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <!-- <div class="swiper-slide">
+                    <section>
+                        <div class="main-banner relative truncate">
+                            <div class="main-banner-background-image absolute top-0 left-[-7%] w-5/12 h-full">
                                 <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
                             </div>
                             <div class="container mx-auto flex justify-center mb-10">
@@ -189,62 +230,7 @@
                             </div>
                         </div>
                     </section>
-                </div>
-                <div class="swiper-slide">
-                    <section>
-                        <div class="main-banner relative truncate">
-                            <div class="main-banner-background-image absolute top-0 left-[-7%] w-4/12 h-full">
-                                <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
-                            </div>
-                            <div class="container mx-auto flex justify-center mb-10">
-                                <div class="w-10/12 lg:w-8/12 xl:w-10/12">
-                                    <div class="main-banner-container">
-                                        <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
-                                            <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
-                                                <img src="assets/faceAdNecks-images/star.png" alt="star">
-                                            </div>
-                                            <div class="banner-first-image text-white">
-                                                <img src="assets/faceAdNecks-images/banner-image-1.png" alt="banner-image" class="max-w-full">
-                                            </div>
-                                            <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
-                                                <p class="text-white raleway text-sm text-color">Cosmetology clinic services</p>
-                                                <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
-                                                  <span class="block lg:inline-block text-white font-bold">NATURAL</span>
-                                                  <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
-                                              </h2>
-                                          </div>
-                                        </div>
-                                        <div class="w-11/12 mt-4 relative">
-                                            <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
-                                                <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
-                                            </div>
-                                            <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
-                                                <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
-                                                    <div class="banner-p my-4 ">
-                                                        <p class="text-white raleway ">We use premium products for a <br> more natural result.</p>
-                                                    </div>
-                                                    <div class="banner-crub flex justify-start lg:justify-start items-center">
-                                                        <div class="banner-crub-image mr-3">
-                                                            <img src="assets/images/Ellipse-2.png" alt="Home">
-                                                        </div>
-                                                        <div class="star absolute top-[65%] left-[3%]">
-                                                            <img src="assets/images/Star-1.png" alt="Home">
-                                                        </div>
-                                                        <p class="mr-3 text-white"></p>
-                                                        <p class="text-white -ml-2 raleway">Browse our craft</p>
-                                                    </div>
-                                                </div>
-                                                <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
-                                                    <img src="assets/faceAdNecks-images/banner-image-2.png" alt="banner-image" class="max-w-full">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
+                </div> -->
             </div>
          </div> 
 
@@ -410,7 +396,7 @@
                     </div>
                     <div class="comment-contaier flex justify-center">
                         <div class="w-10/12">
-                            <div class="comment-first-part">
+                            <div class="comment-first-part relative overflow-hidden">
                                 <div class="swiper-container2">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide flex justify-center px-24">
