--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                                             <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-10 lg:text-6xl ">
                                                 <p class=" raleway text-sm md:text-base text-color">Cosmetology clinic services</p>
                                                 <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
-                                                  <span class="block lg:inline-block text-white font-bold">NATURAL</span>
-                                                  <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
+                                                  <span class="block lg:inline-block text-white ">NATURAL</span>
+                                                  <span class="block lg:inline-block text-white ">BEAUTY</span>
                                               </h2>
                                           </div>
                                         </div>
@@ -159,8 +159,8 @@
                                           <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-10 lg:text-6xl ">
                                               <p class=" raleway text-sm md:text-base text-color">Cosmetology clinic services</p>
                                               <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
-                                                <span class="block lg:inline-block text-white font-bold">NATURAL</span>
-                                                <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
+                                                <span class="block lg:inline-block text-white ">NATURAL</span>
+                                                <span class="block lg:inline-block text-white ">BEAUTY</span>
                                             </h2>
                                         </div>
                                       </div>
@@ -233,8 +233,8 @@
                                           <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-10 lg:text-6xl ">
                                               <p class=" raleway text-sm md:text-base text-color">Cosmetology clinic services</p>
                                               <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
-                                                <span class="block lg:inline-block text-white font-bold">NATURAL</span>
-                                                <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
+                                                <span class="block lg:inline-block text-white ">NATURAL</span>
+                                                <span class="block lg:inline-block text-white ">BEAUTY</span>
                                             </h2>
                                         </div>
                                       </div>
@@ -374,27 +374,27 @@
                     <div class="producttext-front flex flex-wrap justify-between gap-6 mb-1">
                         <div class="w-full md:w-3/12 text-center md:text-start ">
                           <div class="product-text-1">
-                            <h3 class="text-xl md:text-2xl border-b-2 border-gray-300 cormorant mb-4 font-bold">Careful <span>Production</span></h3>
+                            <h3 class="text-3xl border-b-2 border-gray-300 cormorant mb-4 font-bold">Careful <br><span class="font-normal">Production</span></h3>
                             <p class="text-color raleway">We never test products on animals and insects</p>
-                        </div>
+                          </div>
         
                         </div>
                         <div class="w-full md:w-3/12 text-center md:text-start">
                           <div class="product-text-1">
-                            <h3 class="text-xl md:text-2xl border-b-2 border-gray-300 cormorant mb-4 font-bold">Careful <span>Production</span></h3>
+                            <h3 class="text-3xl border-b-2 border-gray-300 cormorant mb-4 font-bold">Self Decorative<br><span class="font-normal">Cosmetics</span></h3>
                             <p class="text-color raleway">We never test products on animals and insects</p>
                           </div>
                         </div>
                         <div class="w-full md:w-3/12 text-center md:text-start mb-2 md:mb-0">
                           <div class="product-text-1">
-                            <h3 class="text-xl md:text-2xl border-b-2 border-gray-300 cormorant mb-4 font-bold">Careful <span>Production</span></h3>
+                            <h3 class="text-3xl border-b-2 border-gray-300 cormorant mb-4 font-bold">A Product That<br><span class="font-normal">Suits You</span></h3>
                             <p class="text-color raleway">We never test products on animals and insects</p>
                           </div>
                         </div>
                       </div>
                  </div>
                 <!-- Product Image -->
-                <div class="w-full md:w-4/12 lg:w-3/12 flex justify-center mb-8 md:mb-0">
+                <div class="w-full md:w-4/12 lg:w-4/12 flex justify-center mb-8 md:mb-0">
                   <div class="product-image">
                     <img src="assets/images/section-2-image.png" alt="product-image" class="w-4/5 md:w-full lg:w-11/12">
                   </div>
@@ -409,7 +409,7 @@
                     <!-- Column 1 -->
                     <div class="w-full md:w-3/12 text-start hidden md:block">
                       <div class="product-text-1">
-                        <h3 class="font-34 border-b-2 border-gray-300 cormorant mb-4">Careful <br><span>Production</span></h3>
+                        <h3 class="text-3xl border-b-2 border-gray-300 cormorant mb-4 font-bold">Careful <br><span class="font-normal">Production</span></h3>
                         <p class="text-color raleway">We never test products on animals and insects</p>
                       </div>
                     </div>
@@ -417,7 +417,7 @@
                     <!-- Column 2 -->
                     <div class="w-full md:w-3/12 text-start hidden md:block">
                       <div class="product-text-1">
-                        <h3 class="font-34 border-b-2 border-gray-300 cormorant mb-4">Careful <br><span>Production</span></h3>
+                        <h3 class="text-3xl border-b-2 border-gray-300 cormorant mb-4 font-bold">Self Decorative<br><span class="font-normal">Cosmetics</span></h3>
                         <p class="text-color raleway">We never test products on animals and insects</p>
                       </div>
                     </div>
@@ -425,7 +425,7 @@
                     <!-- Column 3 -->
                     <div class="w-full md:w-3/12 text-start hidden md:block">
                       <div class="product-text-1">
-                        <h3 class="font-34 border-b-2 border-gray-300 cormorant mb-4">Careful <br><span>Production</span></h3>
+                        <h3 class="text-3xl border-b-2 border-gray-300 cormorant mb-4 font-bold">A Product That<br><span class="font-normal">Suits You</span></h3>
                         <p class="text-color raleway">We never test products on animals and insects</p>
                       </div>
                     </div>
@@ -435,10 +435,10 @@
                   <!-- Description Text -->
                   <div class="product-text-2 pt-2">
                     <div class=" md:text-left">
-                      <p class="py-2.5 text-color font-20 raleway">
+                      <p class="py-2.5 text-color text-xl raleway">
                         Our Beauty in LA Clinic is a premier establishment for permanent cosmetic enhancement, fat and cellulite reduction, Laser hair removal precision, medical skin care, and Emsella Treatment a whole variety of beauty procedures with its state-of-the-art technology, and highly trained and experienced professionals.
                       </p>
-                      <p class="text-color font-20 raleway">
+                      <p class="text-color text-xl raleway">
                         Our Beauty in LA Clinic is a premier establishment for permanent cosmetic enhancement, fat and cellulite reduction, Laser hair removal precision, medical skin care, and Emsella Treatment a whole variety of beauty procedures with its state-of-the-art technology, and highly trained and experienced professionals.
                       </p>
                     </div>
@@ -452,7 +452,7 @@
 
         <section class="detail relative z-10 py-10 md:py-20">
             <div class="detail-heading block md:hidden text-center">
-                <h4 class="text-2xl md:text-4xl font-bold mb-5 cormorant">Dr. Aram Mkhitarian D.O</h4>
+                <h4 class="text-2xl md:text-4xl font-semibold mb-5 cormorant">Dr. Aram Mkhitarian D.O</h4>
               </div>
             <!-- Background Image -->
             <div class="detail-background absolute top-[-50%] left-0 w-4/12 z-0 hidden lg:block">
@@ -460,14 +460,14 @@
             </div>
           
             <div class="container mx-auto flex justify-center items-center px-4">
-              <div class="w-full md:w-10/12 flex flex-wrap md:flex-nowrap justify-center items-center">
+              <div class="w-full md:w-11/12 flex flex-wrap md:flex-nowrap justify-center items-center">
                 <!-- Text Section -->
                 <div class="details-section w-full md:w-3/5 px-4 order-last md:order-first">
                   <div class="detail-heading hidden md:block">
-                    <h4 class="text-2xl md:text-4xl font-bold mb-5 cormorant">Dr. Aram Mkhitarian D.O</h4>
+                    <h4 class="text-2xl md:text-4xl font-bold mb-9 cormorant">Dr. Aram Mkhitarian D.O</h4>
                   </div>
                   <div class="detail-content">
-                    <p class="text-sm md:text-base text-gray-700 raleway leading-relaxed mt-2 md:mt-0">
+                    <p class="text-sm md:text-base text-gray-700 raleway  mt-2 md:mt-0 leading-[10rem]">
                       Licensed and certified physician Aram Mkhitarian, DO graduated from the College of Osteopathic Medicine
                       of the Pacific as a Doctor of Osteopathic Medicine. After his education, he interned at the Henry Ford Macomb
                       Hospital in Michigan, focusing on the urgent care environment. Now, as a practicing doctor at Beauty in LA
