main banner in all section

--- a/sexual.html
+++ b/sexual.html
@@ -89,6 +89,9 @@
                                 <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
                                     <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
                                 </div>
+                                <div class="leave-background-image absolute bottom-[-20%] right-[-20%] block md:hidden">
+                                    <img src="assets/images/background-leave-2.png" alt="leaves">
+                                  </div>
                                 <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
                                     <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
                                         <div class="banner-p my-4 ">
