blog page compelete

--- a/esella.html
+++ b/esella.html
@@ -121,12 +121,12 @@
 
          <section class="cols-padding">
             <div class="advanve-heading text-center mb-6 px-4">
-              <h3 class="font-22 font-bold cormorant text-xl md:text-2xl lg:text-3xl">
+              <h3 class=" font-bold cormorant text-xl md:text-2xl lg:text-3xl">
                 Discover BTL Emsella - <span class="font-normal">The Future of Sexual Health</span>
               </h3>
             </div>
             <div class="Advanced-section flex justify-center">
-              <div class="container px-4">
+              <div class="container  px-4">
                 <div class="advance-first-part">
                   <div class="flex flex-wrap justify-center items-center">
                     <!-- Image Section -->
@@ -140,10 +140,10 @@
                       </div>
                     </div>
                     <!-- Content Section -->
-                    <div class="w-full md:w-8/12 lg:w-6/12">
+                    <div class="w-full md:w-8/12 lg:w-7/12">
                       <div class="advance-content-part">
                         <div class="advance-head">
-                          <h4 class="font-bold font-20 text-lg md:text-xl raleway">
+                          <h4 class="font-medium font-20 text-lg md:text-xl raleway">
                             Mesilla Pelvic Floor & Sexual Health Treatment in Los Angeles
                           </h4>
                           <p class="text-color mt-2 text-sm md:text-base raleway">
@@ -155,17 +155,17 @@
                         </div>
                         <div class="advance-para">
                           <div class="advance-para-head">
-                            <ul class="list-disc list-inside mt-2 text-sm md:text-base raleway">
-                              <li class="font-bold mb-1">Men and women grappling with urinary incontinence.</li>
-                              <li class="font-bold mb-1">Mothers experiencing stress incontinence post-childbirth.</li>
-                              <li class="font-bold mb-1">Women with a history of urinary incontinence.</li>
-                            </ul>
+                            <ol class="list-decimal list-inside mt-2 text-sm md:text-base raleway">
+                              <li class="font-medium mb-1">Men and women grappling with urinary incontinence.</li>
+                              <li class="font-medium mb-1">Mothers experiencing stress incontinence post-childbirth.</li>
+                              <li class="font-medium mb-1">Women with a history of urinary incontinence.</li>
+                            </ol>
                           </div>
                           <div class="advance-para-text text-color mt-3 text-sm md:text-base raleway">
-                            <p>
+                            <p class="text-color">
                               Endorsed by esteemed gynecologists globally, the remarkable results achieved through BTL EMSELLA treatment contribute significantly to improving overall quality of life. Say goodbye to the burdens of incontinence and embrace a life with renewed confidence and comfort.
                             </p>
-                            <p class="mt-2">
+                            <p class="mt-2 text-color raleway">
                               Endorsed by esteemed gynecologists globally, the remarkable results achieved through BTL EMSELLA treatment contribute significantly to improving overall quality of life. Say goodbye to the burdens of incontinence and embrace a life with renewed confidence and comfort.
                             </p>
                           </div>
