--- a/faceAndNeck.html
+++ b/faceAndNeck.html
@@ -137,7 +137,7 @@
         </section>
 
         <!-- MorpheuS8  -->
-        <section class="cols-padding">
+        <section class="cols-padding relative  overflow-hidden">
             <section class="cols-padding py-10">
               <div class="Morpheu container mx-auto relative z-0">
                   <!-- Background Image -->
