--- a/index.html
+++ b/index.html
@@ -1003,9 +1003,9 @@
                   </div>
           
                   <!-- View More Button -->
-                  <div class="latest-button inline-block ml-2 md:ml-0">
+                  <div class="latest-button inline-block ml-2 md:ml-0 relative z-40">
                     <button class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded w-full lg:w-auto ">
-                        <a href="blog.html" class="text-white font-medium hover:underline ">View More</a>
+                        <a href="blog.html" class="text-white font-medium  ">View More</a>
                     </button>
                   </div>
                 </div>
